apps/fastapi-token-inspection/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fastapi-token-inspection
  namespace: alt-default
  labels:
    app: fastapi-token-inspection
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fastapi-token-inspection
  template:
    metadata:
      labels:
        app: fastapi-token-inspection
    spec:
      containers:
        - name: api
          image: python:3.12-alpine
          ports:
            - containerPort: 8000
          workingDir: /app
          command: ["/bin/sh", "-c"]
          args:
            - |
              [...]
